2011-11-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSKeyValueBinding.m
	([GSKeyValueBinding-transformValue:withOptions:]): Don't use @""
	when no null placeholder is defined.

2011-11-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColorWell.m (-objectValue, -setObjectValue:,
	-takeObjectValueFrom:): Add these missing methods.

2011-11-06  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSBitmapImageRep+PNG.m:
	HACK: PNG can not represent 72DPI exactly. If the pixels-per-meter value is
	near 72DPI, assume it is exactly 72 DPI. Note that the same problem occurrs
	at 144DPI, or 288DPI... so don't use PNG for resolution independent graphics.

2011-11-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m (-insertItemWithTitle:atIndex:): Set
	the action on the menu item to -_popUpItemAction:.

2011-11-05 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSXibLoading.h,
	* Source/GSXibLoader.m: Add decoding of class IBInitialTabViewItemAttribute.

2011-11-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSInfoPanel.m: Tolerate 'Authors' being a string containing
	a single author as well as an array.

2011-11-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTabView.m: Add some bindings for NSTabView.

2011-11-01  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSColorPanel.m: Always send action and colorChanged: when
	the color changes. NSColorPanel is always "continuous" for now...
	to support -isContinuous == NO, we need to augment the API between
	the color panel and the pickers so they can send a message when
	the mouse is released.
	* Source/NSTextView.m: Change typing attributes in response to
	colorChanged:

2011-11-01  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSView.m: centerScanRect patch from Sebastian Reitenbach.
	Note that this makes the NSView autoresizing and rounding test pass,
	but the new centerScanRect test I just added fail.

2011-11-01  Eric Wasylishen  <ewasylishen@gmail.com>
